<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="176dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/Brake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="138dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toStartOf="@+id/switch3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Switch"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        tools:layout_editor_absoluteX="259dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Motor"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        tools:layout_editor_absoluteX="45dp" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Switch"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        tools:layout_editor_absoluteX="257dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="138dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toStartOf="@+id/switch4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/Suspension"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch4" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="72dp"
        android:text="Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch4" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="138dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toStartOf="@+id/switch5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="138dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="Switch"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="167dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="56dp"
        android:text="@string/Validate"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/switch5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="96dp"
        android:text="@string/Quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>