<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Essais">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="158dp"
        android:layout_height="56dp"
        android:layout_marginBottom="48dp"
        android:text="@string/Qualif"
        app:layout_constraintBottom_toTopOf="@+id/textViewTires"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTires"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Tires"
        app:layout_constraintBottom_toTopOf="@+id/seekBarTire"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewChoseTires"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="12dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/seekBarTire"
        app:layout_constraintStart_toEndOf="@+id/textViewTires" />

    <TextView
        android:id="@+id/textViewFuel"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Fuel"
        app:layout_constraintBottom_toTopOf="@+id/seekBarFuel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewChoseFuel"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="12dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/seekBarFuel"
        app:layout_constraintStart_toEndOf="@+id/textViewFuel" />

    <Button
        android:id="@+id/buttonValidateQualif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonQuitQualif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonValidateQualif" />

    <SeekBar
        android:id="@+id/seekBarFuel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="334dp"
        android:layout_height="26dp"
        android:layout_marginBottom="52dp"
        android:max="2"
        android:progress="2"
        app:layout_constraintBottom_toTopOf="@+id/textViewStrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBarTire"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="334dp"
        android:layout_height="26dp"
        android:layout_marginBottom="56dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/textViewFuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <SeekBar
        android:id="@+id/seekBarConso"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="336dp"
        android:layout_height="28dp"
        android:layout_marginBottom="48dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintBottom_toTopOf="@+id/buttonValidateQualif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextViewConso"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Consumption"
        app:layout_constraintBottom_toTopOf="@+id/seekBarConso"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewChoseConso"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/seekBarConso"
        app:layout_constraintStart_toEndOf="@+id/TextViewConso" />

    <SeekBar
        android:id="@+id/seekBarStrat"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="334dp"
        android:layout_height="26dp"
        android:layout_marginBottom="48dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/TextViewConso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewStrat"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Strategy"
        app:layout_constraintBottom_toTopOf="@+id/seekBarStrat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewChoseStrat"
        android:layout_width="121dp"
        android:layout_height="21dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="4dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/seekBarStrat"
        app:layout_constraintStart_toEndOf="@+id/textViewStrat" />

</androidx.constraintlayout.widget.ConstraintLayout>